[gd_scene load_steps=5 format=3 uid="uid://c7vxo6rpic2x6"]

[ext_resource type="Texture2D" uid="uid://cqlatio2sbncw" path="res://Themes/Classic95/Styles/Window/Window_yellow.png" id="1_f35xh"]
[ext_resource type="Script" path="res://scenes/warningWindowPopup.gd" id="2_2mjte"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jtdgh"]
texture = ExtResource("1_f35xh")
texture_margin_left = 4.0
texture_margin_top = 22.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0
expand_margin_left = 3.0
expand_margin_top = 21.0
expand_margin_right = 3.0
expand_margin_bottom = 3.0
axis_stretch_vertical = 1
region_rect = Rect2(0, 0, 10, 25)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ndpkg"]
bg_color = Color(0.792157, 0.662745, 0.0823529, 1)

[node name="WarningWindow" type="Window"]
title = "Warning!"
position = Vector2i(0, 22)
size = Vector2i(210, 75)
unresizable = true
always_on_top = true
theme_override_styles/embedded_border = SubResource("StyleBoxTexture_jtdgh")
theme_override_styles/embedded_unfocused_border = SubResource("StyleBoxTexture_jtdgh")
script = ExtResource("2_2mjte")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect2" type="ColorRect" parent="Control/ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 21.0
grow_horizontal = 2
color = Color(1, 0.913725, 0.137255, 1)

[node name="Label" type="Label" parent="Control/ColorRect/ColorRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "WARNING"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CloseButton" type="Button" parent="Control/ColorRect/ColorRect2"]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -21.0
offset_bottom = 21.0
grow_horizontal = 0

[node name="Button" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
mouse_default_cursor_shape = 2
text_overrun_behavior = 3

[node name="MarginContainer" type="MarginContainer" parent="Control/Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Description" type="RichTextLabel" parent="Control/Button/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 12
text = "yo mama is so fat...yo mama is so fat..."
fit_content = true
scroll_active = false
scroll_following = true

[node name="Label" type="Label" parent="Control/Button"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -90.0
offset_top = -20.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.258824, 0.258824, 0.258824, 1)
theme_override_font_sizes/font_size = 8
text = "Click for more info...    "

[node name="ProgressBar" type="ProgressBar" parent="Control"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -6.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/fill = SubResource("StyleBoxFlat_ndpkg")
max_value = 10.0
value = 5.23
show_percentage = false

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="button_down" from="Control/ColorRect/ColorRect2/CloseButton" to="." method="_on_close_button_button_down"]
[connection signal="pressed" from="Control/Button" to="." method="_on_infobutton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
